# aruco_detection

src/aruco_det/: CMakeLists.txt  package.xml
src/aruco_det/launch/: aruco_detector.launch
src/aruco_det/src/: aruco_det.cpp  aruco_test.cpp
